@@ -48,7 +48,7 @@ __divuschar_rrx_s::
 
         ld      a,l             ; Sign extend
         rlca
-        sbc     a
+        sbc     a, a
         ld      h,a
 
         jp      __div16
